# LLM-Meeting-Minutes-Generation

./: README.md  app.py  pyproject.toml  requirements.txt
notebooks/: meeting_minutes.ipynb
