[project]
name = "Meeting-Minutes"
version = "0.0.1"
description = "AI capabale Meeting Minutes genration"
authors = [{name = "Prathamesh Uravane", email = "upratham2002@gmail.com"}]
requires-python = "==3.11.*"
dependencies = [
    "accelerate>=1.12.0",
    "bitsandbytes>=0.49.1",
    "dotenv>=0.9.9",
    "google>=3.0.0",
    "google-genai>=1.61.0",
    "gradio>=6.4.0",
    "huggingface-hub>=1.3.5",
    "ipykernel>=7.1.0",
    "ipython>=9.9.0",
    "openai>=2.15.0",
    "requests>=2.32.5",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "transformers>=5.0.0",
]
[tool.setuptools]
packages = {find = {}}

[tool.setuptools.dynamic]
dependencies = {file = "requirements.txt"}
